# Spot_test_task

./: CNN_Classifier.py  GLOBAL.py  Gradio.py  HYPERPARAMETERS.py  KNN_sercher.py  Prepairing_Dataset.py  Preparing_Dataset.py  README.md  Settings.py  class_names.json  main.py  pyproject.toml  settings.json
features/: bags.npy  full_body.npy  glasses.npy  lower_body.npy  other.npy  shoes.npy  upper_body.npy
test_data/upper_body/: item-58ac18d4-7716-42f0-93e0-8b21c0b9b8ca
